Bug 165351 - Crash when undoing adding new row in table
Summary: Crash when undoing adding new row in table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo Cell-Management Crash
  Show dependency treegraph
 
Reported: 2025-02-20 09:45 UTC by Aron Budea
Modified: 2025-03-04 17:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (1.48 KB, text/plain)
2025-02-20 09:45 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-02-20 09:45:21 UTC
Created attachment 199339 [details]
Backtrace

- Open attachment 181139 [details] (from bug 149798),
- In first table, click at the end of the bottom right cell,
- Press Tab, which adds a new row,
- Undo.

=> Crash.

Observed using LO 25.8.0.0.alpha0+ (41ab24cecd6ad74312843f113d2faa13259cdb7d) / Windows.

It is a regression from the following commit in 25.2:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=0a3f5169acc6708c352cad0fa07fdb4af8c8b2dd
author		Michael Stahl <michael.stahl@allotropia.de>	2024-11-28 14:28:58 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2024-11-29 17:26:45 +0100

sw: layout: fix toggling Hidden Paragraphs resulting in bad layout
Comment 1 m_a_riosv 2025-02-20 22:49:40 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4059c4b9ae2230d9c6d722d457dca2216ddd581
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-GB
Calc: CL threaded
Comment 2 Commit Notification 2025-03-03 11:58:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/641cb041a55aae30c629a80e134efc493027f0c4

tdf#165351 sw: fix crash after Undo of inserting table row...

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2025-03-03 12:21:46 UTC
fixed on master
Comment 4 Commit Notification 2025-03-03 14:53:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/dfeee3e279ba5838af61326f3b9c340c16a7e768

tdf#165351 sw: fix crash after Undo of inserting table row...

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-03-04 17:51:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d35cce2756fbaa5e6031e51b13a70613b9342ec9

tdf#165351 sw: fix crash after Undo of inserting table row...

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.